[gd_scene load_steps=10 format=3 uid="uid://djerwjvq4xe3g"]

[ext_resource type="Script" path="res://game/prototype/tales of the unwilling/weapon/script/arrowBullet.gd" id="1_au6m0"]
[ext_resource type="Shader" path="res://content/shader/canvas_force_field.gdshader" id="2_rxgmb"]
[ext_resource type="PackedScene" uid="uid://bbj4fqdnidd8y" path="res://game/prototype/tales of the unwilling/weapon/arrow_trail.tscn" id="3_h1ylh"]
[ext_resource type="PackedScene" uid="uid://r5w46jvug8u" path="res://game/prototype/tales of the unwilling/src/modular_component/hit_box.tscn" id="6_iao5l"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gfnxu"]
shader = ExtResource("2_rxgmb")
shader_parameter/color = Color(0.0705882, 0.254902, 0.184314, 1)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_7d0t7"]

[sub_resource type="CircleShape2D" id="CircleShape2D_cgul8"]

[sub_resource type="CircleShape2D" id="CircleShape2D_umoud"]
radius = 6.32456

[sub_resource type="CircleShape2D" id="CircleShape2D_j43if"]
radius = 48.0104

[node name="arrowBullet" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 13
script = ExtResource("1_au6m0")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_gfnxu")
scale = Vector2(2, 2)
texture = SubResource("CompressedTexture2D_7d0t7")

[node name="trail" parent="." instance=ExtResource("3_h1ylh")]
width = 1.0
script = null

[node name="arrowHead" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 13

[node name="collider" type="CollisionShape2D" parent="arrowHead"]
shape = SubResource("CircleShape2D_cgul8")

[node name="arrowForm" type="CollisionShape2D" parent="."]
use_parent_material = true
shape = SubResource("CircleShape2D_umoud")

[node name="warpScanner" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 12
monitoring = false

[node name="warpScanCollider" type="CollisionShape2D" parent="warpScanner"]
shape = SubResource("CircleShape2D_j43if")
debug_color = Color(0.74902, 0.392157, 0.635294, 0.419608)

[node name="hitBox" parent="." instance=ExtResource("6_iao5l")]

[connection signal="body_entered" from="arrowHead" to="." method="_on_arrow_head_body_entered"]
[connection signal="body_entered" from="warpScanner" to="." method="_on_warp_scanner_body_entered"]
[connection signal="body_exited" from="warpScanner" to="." method="_on_warp_scanner_body_exited"]

[editable path="hitBox"]
